# spl-parser

./: README.md  pyproject.toml
examples/: searchbnf.conf
spl-highlighter/syntaxes/: spl.tmLanguage.json
spl_parser/: spl_resource.py  tmlanguage_generator.py
spl_parser/grammars/: pseudo_bnf.lark
spl_parser/templates/: template.tmLanguage.json
