[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "spl_parser"
version = "0.1.1"

readme = "README.rst"
requires-python = ">=3.8"
authors = [{ name = "Lukáš Kotlaba", email = "lukas.kotlaba@gmail.com" }]
license = { text = "GNU GPLv3" }
keywords = ["splunk", "spl", "syntax", "highlighting"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Environment :: Console",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Topic :: Text Editors",
    "Topic :: Utilities",
]

dependencies = [
    "aiohttp",
    "lark-parser",
    "click",
    "pytest>=8.3.5",
]

[project.scripts]
spl_parser = "spl_parser.cli:cli"

[tool.hatch.build]
include = ["spl_parser/templates/*.json", "spl_parser/grammars/*.lark"]

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q"
testpaths = ["tests"]
